ricerca-simboli-utf8

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <ul>
+                <li>Donna</li>
+                <li>Uomo</li>
+                <li>Bambini</li>
+            </ul>
+            <ul>
+                <li><img src="img/boolean-logo.png" alt="logo"></li>
+            </ul>
+            <ul></ul>
+        </div>
+    </header>
 </body>
 </html>
