utf-8_fac-simile

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <ul>
+        <div class="container-top">
+            <ul class="sex">
                 <li>Donna</li>
                 <li>Uomo</li>
                 <li>Bambini</li>
@@ -19,7 +19,11 @@
             <ul>
                 <li><img src="img/boolean-logo.png" alt="logo"></li>
             </ul>
-            <ul></ul>
+            <ul>
+                <li>&#128822;</li>
+                <li>&#9825;</li>
+                <li>&#128708;</li>
+            </ul>
         </div>
     </header>
 </body>
