loghi-posizionati-male

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header>
-        <div class="container-top">
+        <div class="container-header">
             <ul class="sex">
                 <li>Donna</li>
                 <li>Uomo</li>
                 <li>Bambini</li>
             </ul>
-            <ul>
-                <li><img src="img/boolean-logo.png" alt="logo"></li>
+            <ul class="logo-img">
+                <li><img src="img/boolean-logo.png" alt="logo" class="logo"></li>
             </ul>
-            <ul>
+            <ul class="symbols">
                 <li>&#128822;</li>
                 <li>&#9825;</li>
                 <li>&#128708;</li>
