montaggio-primo-container

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,5 +30,28 @@
             </ul>
         </div>
     </header>
+    <main>
+        <div class="container-main">
+            <div class="container-m-top">
+                <div class="img-1">
+                    <img src="img/1.webp" alt="img-1">
+                    <div class="heart">&#9829;</div>
+                    <div class="discount">-50%</div>
+                    <div class="sustainability">Sostenibilità</div>
+                </div>
+                <div>
+                    <img src="img/2.webp" alt="img-2">
+                </div>
+                <div>
+                    <img src="img/3.webp" alt="img-3">
+                </div>
+            </div>
+            <div class="container-m-bottom">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
