--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="container-header">
+        <nav class="container-header">
             <ul class="sex">
                 <li>Donna</li>
                 <li>Uomo</li>
@@ -28,7 +28,7 @@
                 <li>&#9825;</li>
                 <li>&#128708;</li>
             </ul>
-        </div>
+        </nav>
     </header>
     <main>
         <div class="container-main">
@@ -38,6 +38,10 @@
                     <div class="heart">&#9829;</div>
                     <div class="discount">-50%</div>
                     <div class="sustainability">Sostenibilità</div>
+                    <p class="brand">Levi's</p>
+                    <p>RELAXED FIT TEE UNISEX</p>
+                    <span class="price-red">14,99 &#8364;</span>
+                    <span class="through">29,99 &#8364;</span>
                 </div>
                 <div>
                     <img src="img/2.webp" alt="img-2">
