--- a/index.html
+++ b/index.html
@@ -33,27 +33,39 @@
     <main>
         <div class="container-main">
             <div class="container-m-top">
-                <div class="img-1">
+                <div class="image">
                     <img src="img/1.webp" alt="img-1">
                     <div class="heart">&#9829;</div>
                     <div class="discount">-50%</div>
                     <div class="sustainability">Sostenibilità</div>
                     <p class="brand">Levi's</p>
-                    <p>RELAXED FIT TEE UNISEX</p>
+                    <p class="uppercase">relaxed fit tee unisex</p>
                     <span class="price-red">14,99 &#8364;</span>
                     <span class="through">29,99 &#8364;</span>
                 </div>
-                <div>
+                <div class="image">
                     <img src="img/2.webp" alt="img-2">
+                    <div class="heart">&#9829;</div>
+                    <div class="discount">-30%</div>
+                    <p class="brand">Guess</p>
+                    <p class="uppercase">roses tee</p>
+                    <span class="price-red">20,99 &#8364;</span>
+                    <span class="through">29,99 &#8364;</span>
                 </div>
-                <div>
+                <div class="image">
                     <img src="img/3.webp" alt="img-3">
+                    <div class="heart">&#9829;</div>
+                    <div class="discount">-30%</div>
+                    <p class="brand">Come Zucchero Filato</p>
+                    <p class="uppercase">voglia di colori pastello</p>
+                    <span class="price-red">129,99 &#8364;</span>
+                    <span class="through">184,99 &#8364;</span>
                 </div>
             </div>
             <div class="container-m-bottom">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div ></div>
+                <div ></div>
+                <div ></div>
             </div>
         </div>
     </main>
