--- a/index.html
+++ b/index.html
@@ -63,9 +63,31 @@
                 </div>
             </div>
             <div class="container-m-bottom">
-                <div ></div>
-                <div ></div>
-                <div ></div>
+                <div class="image">
+                    <img src="img/4.webp" alt="img-4">
+                    <div class="heart">&#9829;</div>
+                    <div class="discount">-50%</div>
+                    <div class="sustainability">Sostenibilità</div>
+                    <p class="brand">Levi's</p>
+                    <p class="uppercase">tee unisex</p>
+                    <span class="price-red">14,99 &#8364;</span>
+                    <span class="through">29,99 &#8364;</span>
+                </div>
+                <div class="image">
+                    <img src="img/5.webp" alt="img-5">
+                    <div class="heart">&#9829;</div>
+                    <p class="brand">Maya Deluxe</p>
+                    <p class="uppercase">stripe bodice</p>
+                    <span class="price-red">99,99 &#8364;</span>
+                </div>
+                <div class="image">
+                    <img src="img/6.webp" alt="img-6">
+                    <div class="heart">&#9829;</div>
+                    <div class="sustainability bot-sus">Sostenibilità</div>
+                    <p class="brand">Esprit</p>
+                    <p class="uppercase">Maglione - black</p>
+                    <span class="price-red">29,99 &#8364;</span>
+                </div>
             </div>
         </div>
     </main>
