--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -91,5 +95,29 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container-footer">
+            <ul class="info">
+                <li>Boolando s.r.l
+                    <ul class="info-bottom">
+                        <li>Informazioni legali</li>
+                        <li>Informativa sulla privacy</li>
+                        <li>Diritto di recesso</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="info">
+                <li>Trovaci anche su
+                    <ul class="info-bottom">
+                        <li><i class="fa-brands fa-twitter no-color"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-facebook-f"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                        <li><i class="fa-brands fa-pinterest"></i></li>  
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
