--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="container-main">
             <div class="container-m-top">
                 <div class="image">
-                    <img src="img/1.webp" alt="img-1">
+                    <img src="img/1.webp" alt="img-1" class="img-pri">
+                    <img src="img/1b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <div class="discount">-50%</div>
                     <div class="sustainability">Sostenibilità</div>
@@ -48,7 +49,8 @@
                     <span class="through">29,99 &#8364;</span>
                 </div>
                 <div class="image">
-                    <img src="img/2.webp" alt="img-2">
+                    <img src="img/2.webp" alt="img-2" class="img-pri">
+                    <img src="img/2b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <div class="discount">-30%</div>
                     <p class="brand">Guess</p>
@@ -57,7 +59,8 @@
                     <span class="through">29,99 &#8364;</span>
                 </div>
                 <div class="image">
-                    <img src="img/3.webp" alt="img-3">
+                    <img src="img/3.webp" alt="img-3" class="img-pri">
+                    <img src="img/3b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <div class="discount">-30%</div>
                     <p class="brand">Come Zucchero Filato</p>
@@ -68,7 +71,8 @@
             </div>
             <div class="container-m-bottom">
                 <div class="image">
-                    <img src="img/4.webp" alt="img-4">
+                    <img src="img/4.webp" alt="img-4" class="img-pri">
+                    <img src="img/4b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <div class="discount">-50%</div>
                     <div class="sustainability">Sostenibilità</div>
@@ -78,14 +82,16 @@
                     <span class="through">29,99 &#8364;</span>
                 </div>
                 <div class="image">
-                    <img src="img/5.webp" alt="img-5">
+                    <img src="img/5.webp" alt="img-5" class="img-pri">
+                    <img src="img/5b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <p class="brand">Maya Deluxe</p>
                     <p class="uppercase">stripe bodice</p>
                     <span class="price-red">99,99 &#8364;</span>
                 </div>
                 <div class="image">
-                    <img src="img/6.webp" alt="img-6">
+                    <img src="img/6.webp" alt="img-6" class="img-pri">
+                    <img src="img/6b.webp" alt="" class="img-hov">
                     <div class="heart">&#9829;</div>
                     <div class="sustainability bot-sus">Sostenibilità</div>
                     <p class="brand">Esprit</p>
